:bug: fix for missing scrollbar?

--- a/core/interface/static/css/projectalice.css
+++ b/core/interface/static/css/projectalice.css
@@ -183,7 +183,7 @@ button.button{ font-size: 1.6em; height: 2em; }
 .skillInstructions { width: 100%; margin: .2em; text-align: right; }
 
 /* Configuration Screens */
-.configBox { width: 100%; display: table; font-family: var(--readable); background-color: var(--secondary); border-spacing: 0 10px; }
+.configBox { width: 100%; font-family: var(--readable); background-color: var(--secondary); border-spacing: 0 10px; }
 
 .configCategory { width: 100%; display: table; margin-bottom: 30px; font-family: var(--long); background-color: var(--secondary); border-spacing: 0 10px; }
 
